--- a/backoffice.html
+++ b/backoffice.html
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-6">
-                <h2 id="title" class="text-light">BACKOFFICE --- </h2>
+                <h2 id="title" class="text-light mt-5 d-inline-block">BACKOFFICE --- </h2>
                 <form class="was-validated">
                     <div class="mb-3">
                         <label for="name">Title</label>
@@ -185,17 +185,96 @@
                         <li>Corporate Information</li>
                     </ul>
                 </div>
-
-
-
-
             </div>
-
         </div>
         <p class="copyright text-secondary">© 2021 Netflix, inc. Francesco Micuno, Javokhir Bozorov, Yonatan Gosaye </p>
 
     </div>
+    <script>
+        const idItem = new URLSearchParams(window.Location.search)
+        let title = document.getElementById("title")
+        let btnAdd = document.getElementById("add")
+        let btnSend = document.getElementById("send")
+        let btnDel = document.getElementById("del")
+        let url = "https://striveschool-api.herokuapp.com/api/movies"
 
+        window.onload = () => {
+
+
+            if (idItem) {
+                title.innerText += " edit film"
+                btnAdd.classList.toggle("d-none")
+
+
+
+
+
+
+            } else {
+                title.innerText += " add new film"
+                btnSend.classList.add("d-none")
+
+
+
+
+
+            }
+
+        }
+
+        const newFilm = {
+            name: document.getElementById("name").value,
+            description: document.getElementById("description").value,
+            category: document.getElementById("category").value,
+            imageUrl: document.getElementById("urlImage").value
+        }
+
+        btnDel.onclick = async(idItem) => {
+            const res = await fetch(url + idItem, {
+                "method": "DELETE",
+                headers: {
+                    Authorization: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MTgyOGQ1MWFhY2FhMjAwMTU1MmExNzUiLCJpYXQiOjE2MzYxMDYzMDUsImV4cCI6MTYzNzMxNTkwNX0.coJwGNfHZHba2EmsENjQ - KPY - ZzrDFCnx24XJdM4Cko ",
+                    'Content-Type': 'application/json'
+                }
+            })
+        }
+
+
+
+
+
+
+
+        const sendItem = async(item) => {
+            const res = await fetch(url + idItem, {
+                "method": "PUT",
+                body: JSON.stringify(newFilm),
+                headers: {
+                    Authorization: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MTgyOGQ1MWFhY2FhMjAwMTU1MmExNzUiLCJpYXQiOjE2MzYxMDYzMDUsImV4cCI6MTYzNzMxNTkwNX0.coJwGNfHZHba2EmsENjQ - KPY - ZzrDFCnx24XJdM4Cko ",
+                    'Content-Type': 'application/json'
+                }
+            })
+        }
+
+
+
+
+        const addItem = async() => {
+            const res = await fetch(url, )
+            try {
+                if (res.ok) {
+                    const data = await res.json()
+                    return data
+                }
+
+            } catch (error) {
+                console.log("error")
+            }
+        }
+
+
+        //if Url doesn't contain id
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
