--- a/backoffice.html
+++ b/backoffice.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
 
                 <li class="nav-item active">
@@ -190,7 +190,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright text-secondary">© 2021 Netflix, inc. Francesco Micuno, Javokhir Bozorov, Yonatan Gosaye </p>
+        <p class="copyright text-secondary">© 2021 Striveflix, inc. Francesco Micunco</p>
 
     </div>
     <script>
@@ -283,13 +283,6 @@
             }
         }
     </script>
-
-
-
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
