--- a/movie.html
+++ b/movie.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html"><img src="assets/netflix_logo.png" class="img-fluid" alt="" srcset=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        
-      </button>
+            <span class="navbar-toggler-icon"></span>
+
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -62,8 +62,8 @@
                 <a href="/backoffice.html" class="btn btn-outline-light mx-3" style="font-size: small;">admin</a>
                 <div class="btn-group">
                     <button class="btn btn-secondary dropdown-toggle avatar-btn " type="button" data-toggle="dropdown" aria-expanded="false">
-           <img src="assets/avatar.png" class="small-avatar-img rounded" alt="" srcset="">
-          </button>
+                        <img src="assets/avatar.png" class="small-avatar-img rounded" alt="" srcset="">
+                    </button>
                     <ul class="dropdown-menu dropdown-menu-dark avatar-dropdown">
                         <li>
                             <a class="dropdown-item" href="#">
@@ -90,89 +90,35 @@
     <!-- Navbar ENDS here -->
 
     <div class="m-4 d-flex">
-
+        <h2 class="shows-heading text-light d-inline-block">Selected Movie</h2>
 
         <!-- Genre dropdown button -->
-        <div class="dropdown d-inline mx-5">
-            <button class="btn-sm dropdown-toggle genre-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Genres
-        </button>
-            <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Documentary</a>
-                <a class="dropdown-item" href="#">Science Fiction</a>
-                <a class="dropdown-item" href="#">Classic</a>
-            </div>
-        </div>
-
-        <div class="list-view ml-auto mr-3 d-none d-sm-inline-block">
-
-            <i class="bi bi-list text-light  d-flex-row"></i>
-            <i class="bi bi-grid-fill text-light d-flex-row"></i>
-        </div>
-
-    </div>
-
-    <div class="tv-shows container-fluid mx-3">
-
-        <h4 class="mt-5 row-headings text-light">Trending Now</h4>
-
-        <!-- Desktop -->
-
-        <div id="trendingNowControls" class="carousel slide d-none d-md-block" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row no-gutters row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6">
-                        <div class="col p-1"><img src="assets/media/media1.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media2.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media3.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media4.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media5.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media6.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                    </div>
-
-                </div>
-                <div class="carousel-item">
-                    <div class="row no-gutters row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6">
-                        <div class="col p-1"><img src="assets/media/media7.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media8.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media9.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media10.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media11.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media12.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row no-gutters row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6">
-                        <div class="col p-1"><img src="assets/media/media13.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media14.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media15.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media16.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media17.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                        <div class="col p-1"><img src="assets/media/media18.webp" alt="" class="img-fluid rounded movie-cover"></div>
-                    </div>
-                </div>
-            </div>
-
-            <a class="carousel-control-prev" href="#trendingNowControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#trendingNowControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-
-
-
-
-        <!-- Mobile -->
-
 
 
     </div>
 
 
+
+
+    <!-- Desktop -->
+
+
+
+    <div class="container container-fluid">
+        <div class="row">
+            <div class="col-6 d-flex justify-content-center">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -239,9 +185,12 @@
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
     <script src="js/script.js"></script>
+    <script src="movie.js"></script>
 </body>
 
 </html>
